# src/integracoes/mobuss/dto/consultar-status-atendimento.dto.ts
@@ -1,0 +1,7 @@
+// dto/consultar-status-atendimento.dto.ts
+import { IsString } from 'class-validator';
+
+export class ConsultarStatusAtendimentoDto {
+  @IsString()
+  idSolicitacaoAtendimento: string;
+}
